[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/voxel_factory/VoxelEditor/voxel_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/open.png" type="Texture" id=2]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/save.png" type="Texture" id=3]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/tool_group.tres" type="ButtonGroup" id=4]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/pen.png" type="Texture" id=5]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/pen_toggle.png" type="Texture" id=6]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/eraser.png" type="Texture" id=7]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/eraser_toggle.png" type="Texture" id=8]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/hand.png" type="Texture" id=9]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/icons/hand_toggle.png" type="Texture" id=10]
[ext_resource path="res://addons/voxel_factory/VoxelEditor/editor_view.tscn" type="PackedScene" id=11]

[sub_resource type="Environment" id=1]
background_energy = 0.0
ssao_enabled = true

[sub_resource type="World" id=2]
environment = SubResource( 1 )

[node name="Voxel Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 1280.0
margin_bottom = 25.0

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 25.0
hint_tooltip = "Open a new mesh(.tres)"
focus_mode = 0
text = "Open"
icon = ExtResource( 2 )

[node name="Button2" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 128.0
margin_bottom = 25.0
hint_tooltip = "Save the current mesh"
focus_mode = 0
text = "Save"
icon = ExtResource( 3 )

[node name="Button3" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 191.0
margin_bottom = 25.0
hint_tooltip = "Save the current mesh as"
focus_mode = 0
text = "Save as"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 199.0
margin_bottom = 25.0

[node name="PenTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 228.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Pen tool"
focus_mode = 0
toggle_mode = true
pressed = true
group = ExtResource( 4 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="EraseTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 232.0
margin_right = 257.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Eraser tool"
focus_mode = 0
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="MoveTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 261.0
margin_right = 286.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Move tool"
focus_mode = 0
toggle_mode = true
group = ExtResource( 4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="ColorPickerTool" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 290.0
margin_right = 290.0
margin_bottom = 25.0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 298.0
margin_bottom = 25.0

[node name="Name" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 302.0
margin_top = 5.0
margin_right = 340.0
margin_bottom = 19.0
text = "Name"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 1008.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
hint_tooltip = "The current opened mesh"
focus_mode = 0
size_flags_horizontal = 3
editable = false
focus_mode = 0
context_menu_enabled = false
caret_blink = true

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1012.0
margin_right = 1016.0
margin_bottom = 25.0

[node name="Name2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1020.0
margin_top = 5.0
margin_right = 1085.0
margin_bottom = 19.0
text = "Voxel size"

[node name="VoxelSize" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1089.0
margin_right = 1147.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
text = "1"
align = 1
context_menu_enabled = false

[node name="HSlider" type="HSlider" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1151.0
margin_right = 1251.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
min_value = 1.0
max_value = 6.0
value = 6.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1255.0
margin_right = 1280.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
shortcut_in_tooltip = false
edit_alpha = false

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1280.0
margin_bottom = 700.0
focus_mode = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/MarginContainer2"]
margin_right = 1280.0
margin_bottom = 671.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/MarginContainer2/ViewportContainer"]
size = Vector2( 1280, 671 )
own_world = true
world = SubResource( 2 )
handle_input_locally = false
hdr = false
debug_draw = 1
render_target_update_mode = 3
gui_snap_controls_to_pixels = false

[node name="Spatial" parent="VBoxContainer/MarginContainer2/ViewportContainer/Viewport" instance=ExtResource( 11 )]

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 704.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
margin_right = 1280.0
margin_bottom = 16.0
alignment = 2

[node name="VoxPosition" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 977.0
margin_top = 1.0
margin_right = 1118.0
margin_bottom = 15.0
text = "Current voxel: (0, 2, 0)"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 1122.0
margin_right = 1126.0
margin_bottom = 16.0

[node name="ZoomSlider" type="HSlider" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 1130.0
margin_right = 1280.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3
min_value = 20.0
max_value = 120.0
value = 60.0
ticks_on_borders = true

[node name="OpenDialog" type="FileDialog" parent="."]
margin_right = 524.0
margin_bottom = 256.0
window_title = "Ouvrir un fichier"
mode = 0
filters = PoolStringArray( "*.tres" )

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 526.0
margin_bottom = 258.0
filters = PoolStringArray( "*.tres" )

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button2" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button3" to="." method="_on_SaveAs_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/PenTool" to="." method="_on_PenTool_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/EraseTool" to="." method="_on_EraseTool_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/MoveTool" to="." method="_on_MoveTool_pressed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/HBoxContainer/HSlider" to="." method="_on_voxSizeSlider_value_changed"]
[connection signal="color_changed" from="VBoxContainer/MarginContainer/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer3/HBoxContainer/ZoomSlider" to="." method="_on_ZoomSlider_value_changed"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_OpenDialog_file_selected"]
